# engine

./: .gitignore  CMakeLists.txt
cmake/: VulkanSDK.cmake
docs/: vulkan_backend_architecture.md
include/core/: Log.hpp  Result.hpp  Time.hpp  utils.hpp
include/runtime/core/: Handle.hpp  HandleTable.hpp
include/runtime/platform/: NativeWindowHandle.hpp
include/runtime/platform/Qt/: QtWindow.hpp  SurfaceQt.hpp
include/runtime/vk/: VulkanBackend.hpp
include/runtime/vk/core/: VertexFormat.hpp  VulkanAdapter.hpp  VulkanCore.hpp  VulkanDevice.hpp  VulkanInstance.hpp  VulkanQueue.hpp  types.hpp  utils.hpp
include/runtime/vk/present/: PresentTarget.hpp  PresentTypes.hpp  PresentationSystem.hpp  VulkanSurface.hpp  VulkanSwapchain.hpp
src/: CMakeLists.txt  main.cpp
src/core/: Log.cpp  Result.cpp  Time.cpp
src/runtime/platform/Qt/: QtWindow.cpp  SurfaceQt.cpp
src/runtime/vk/: VulkanBackend.cpp
src/runtime/vk/core/: VulkanAdapter.cpp  VulkanCore.cpp  VulkanDevice.cpp  VulkanInstance.cpp  VulkanQueue.cpp
src/runtime/vk/present/: PresentTarget.cpp  PresentationSystem.cpp  VulkanSurface.cpp  VulkanSwapchain.cpp
